erDiagram
    Users ||--o{ AuditLog : creates
    Users {
        int user_id PK
        string email UK "Primary identifier, must be in Members table"
        string password_hash
        string role "Super Admin, Admin, Add-Member"
        string reference_email "For Add-Member: existing member who vouched"
        string recovery_code_hash "For Super Admin only"
        datetime created_at
        datetime last_login
        boolean is_active
    }

    Families ||--o{ Members : contains
    Families ||--o{ DepartedMembers : contains
    Families }o--|| PrayerGroups : belongs_to
    Families ||--o{ DuplicateFamilyAlerts : triggers
    Families {
        int family_id PK
        string family_name "Head of Family Name, min 3 chars"
        string current_address
        string home_address
        string parish
        int prayer_group_id FK
        string photo_path "Relative path to image file"
        datetime created_at
        datetime updated_at
        boolean is_deleted "Soft delete flag (visible to Admin only)"
        datetime deleted_at
        string deletion_reason "Mandatory reason for soft delete"
    }

    Members {
        int member_id PK
        int family_id FK
        string name
        string relation "Head, Spouse, Child, Parent, etc"
        date date_of_birth
        date date_of_marriage "NULL if unmarried"
        string profession
        string email UK "Unique across all members"
        string phone
        boolean is_head_of_family
        datetime created_at
        datetime updated_at
        boolean is_deleted "Soft delete flag"
        datetime deleted_at
    }

    DepartedMembers {
        int departed_id PK
        int family_id FK
        string name
        string gender "Male, Female, Other"
        string relation
        date date_of_birth "Optional, DD/MM, year optional"
        int birth_year "Optional"
        date date_of_death "DD/MM, year optional"
        int death_year "Optional"
        string notes "Optional burial location, etc"
        datetime created_at
        datetime updated_at
        boolean is_deleted "Soft delete flag (visible to Admin only)"
        datetime deleted_at
        string deletion_reason "Mandatory reason for soft delete"
    }

    PrayerGroups {
        int group_id PK
        string group_name UK
        string background_color "Hex color code, unique"
        datetime created_at
        datetime updated_at
        boolean is_active
    }

    AuditLog {
        int log_id PK
        int user_id FK
        string action "login, add, edit, delete, restore, export"
        string target_table "families, members, departed_members, etc"
        int target_id "ID of affected record"
        text details_json "JSON with before/after values"
        string deletion_method "Auto-deleted by system or Deleted by Super Admin: [username]"
        datetime timestamp
    }

    DuplicateFamilyAlerts {
        int alert_id PK
        int family_id_1 FK
        int family_id_2 FK
        string family_name "Duplicate name"
        datetime detected_at
        boolean is_resolved
        string resolution_action "keep_both, deleted_one, renamed"
        int resolved_by_user_id FK
        datetime resolved_at
    }

    CrashReports {
        int crash_id PK
        datetime timestamp
        string error_type
        text stack_trace
        text user_action_history "Last 10 actions before crash"
        string app_version
        string os_version
    }

    AppSettings {
        int setting_id PK
        string key UK "db_location, backup_path, header_image_path, etc"
        text value
        datetime updated_at
        int updated_by_user_id FK
    }

    SystemHealth {
        int health_id PK
        datetime snapshot_time
        float cpu_usage_percent
        int db_size_bytes
        int photo_storage_bytes
        int log_storage_bytes
        int total_families
        int total_members
        int active_users
    }